# PxParser

./: CMakeLists.txt
Assets/: out.txt  test.txt
CMake/: src.cmake
Src/PxParser/: PxParser.cpp  PxParser.hpp  main.cpp
Src/PxParser/Data/: PxParserString.cpp  PxParserString.hpp
Src/PxParser/Document/: PxParserCondition.cpp  PxParserCondition.hpp  PxParserDocument.cpp  PxParserDocument.hpp  PxParserLocalizationDocument.cpp  PxParserLocalizationDocument.hpp  PxParserNode.cpp  PxParserNode.hpp  PxParserScriptsDocument.cpp  PxParserScriptsDocument.hpp  PxParserValue.cpp  PxParserValue.hpp
Src/PxParser/FileSystem/: PxParserFileSystem.cpp  PxParserFileSystem.hpp  PxParserLocalizations.cpp  PxParserLocalizations.hpp  PxParserMod.cpp  PxParserMod.hpp  PxParserModFile.cpp  PxParserModFile.hpp
Src/PxParser/Helpers/: PxParserConverters.cpp  PxParserConverters.hpp  PxParserDebugPrinters.cpp  PxParserDebugPrinters.hpp  PxParserFilesHelper.cpp  PxParserFilesHelper.hpp  PxParserStringHelper.cpp  PxParserStringHelper.hpp
Src/PxParser/Lexer/: PxParserLexer.cpp  PxParserLexer.hpp  PxParserToken.cpp  PxParserToken.hpp
Src/PxParser/PxLexer/: PxParserLexer.hpp  PxParserToken.cpp  PxParserToken.hpp
